devo usare cose deprecate perchè cosi piace a sonarcloud